fix: prevent label overflow behind event list (#786)

--- a/app/components/pipeline-graph-nav/styles.scss
+++ b/app/components/pipeline-graph-nav/styles.scss
@@ -83,7 +83,7 @@
   }
 
   .col {
-    flex: 1 0 calc(100% / 8);
+    flex: 1 0 calc(100% / 12);
     padding-left: 10px;
     border-right: 1px solid $grey-500;
 
